# ChangeLog for www-apache/mod_ftpd
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_ftpd/ChangeLog,v 1.2 2007/08/04 17:17:43 swegener Exp $

  29 Jul 2007; Christian Heim <phreak@gentoo.org> +files/45_mod_ftpd.conf,
  +metadata.xml, +mod_ftpd-0.13.0.ebuild, +mod_ftpd-0.13.1.ebuild,
  +mod_ftpd-0.14.ebuild:
  Moving net-www/mod_ftpd to www-apache/mod_ftpd (#81244).

*mod_ftpd-0.14 (28 Jan 2007)

  28 Jan 2007; Christian Heim <phreak@gentoo.org> +mod_ftpd-0.14.ebuild:
  Yet another version bump.

  25 Jan 2007; Luca Longinotti <chtekk@gentoo.org> mod_ftpd-0.13.1.ebuild:
  Cleanup.

*mod_ftpd-0.13.1 (25 Jan 2007)

  25 Jan 2007; Christian Heim <phreak@gentoo.org> +mod_ftpd-0.13.1.ebuild:
  Version bump (thanks to Momsen Reincke <mreincke at gmx.net> in 163499),
  fixing the compile time bug when dev-libs/apr{,util} is being compiled with
  LDFLAGS="-Wl,--as-needed".

  14 Jan 2007; Luca Longinotti <chtekk@gentoo.org>
  -files/0.12.3-mod_ftpd-ipv6.patch, -files/mod_ftpd.conf,
  mod_ftpd-0.13.0.ebuild:
  Cleanup, fix deps.

  04 Jun 2006; Michael Stewart <vericgar@gentoo.org>
  -mod_ftpd-0.12.3.ebuild:
  Remove old-style ebuilds

  04 Jun 2006; Michael Stewart <vericgar@gentoo.org> mod_ftpd-0.13.0.ebuild:
  Address dependency issues caused by depend.apache. Refer to bug 107127.

  26 Dec 2005; Joseph Jezak <josejx@gentoo.org> mod_ftpd-0.13.0.ebuild:
  Marked ~ppc for bug #116721.

  18 Sep 2005; Michael Stewart <vericgar@gentoo.org> mod_ftpd-0.13.0.ebuild:
  Stable on x86

*mod_ftpd-0.13.0 (30 Jan 2005)

  30 Jan 2005; Benedikt Boehm <hollow@gentoo.org> metadata.xml,
  +files/45_mod_ftpd.conf, +mod_ftpd-0.13.0.ebuild:
  bump to 0.13.0 uses new apache-module eclass

  20 Jun 2004; Chuck Short <zul@gentoo.org> mod_ftpd-0.12.3.ebuild:
  Stable for x86.

  03 Jun 2004; Chuck Short <zul@gentoo.org> files/mod_ftpd.conf:
  Added missing conf file. Closes #52480.

*mod_ftpd-0.12.3 (15 May 2004)
