@@ -1,0 +1,49 @@
+<IfDefine FTPD>
+	LoadModule ftpd_module modules/mod_ftpd.so
+
+	# Load any of the provider modules here (for user specific chroots)
+	#LoadModule ftpd_dbm_module modules/mod_ftpd_dbm.so
+	#LoadModule ftpd_dbi_module modules/mod_ftpd_dbi.so
+	LoadModule ftpd_default_module modules/mod_ftpd_default.so
+	#LoadModule ftpd_fail_module modules/mod_ftpd_fail.so
+
+	Listen 21
+	<VirtualHost *:21>
+		DocumentRoot /home/ftp
+		FtpProtocol On
+		FtpShowRealPermissions Off
+		FtpAllowActive On
+		FtpPasvMinPort 1024
+		FtpPasvMaxPort 65535
+		FtpLimitOrder default
+		FtpDefaultMaxLogins 100
+
+		<Directory /home/ftp>
+			Anonymous_NoUserID Off
+			Anonymous_MustGiveEmail Off
+			Anonymous_VerifyEmail Off
+			Anonymous_LogEmail Off
+			Anonymous anonymous
+			AuthName ftp
+			AuthType Basic
+			Require valid-user
+			Order allow,deny
+			Allow from all
+		</Directory>
+
+		# only allow changing, retrieving files, and listing on the site
+		<Location />
+			<LimitExcept CHDIR GET LIST>
+				Deny from all
+			</LimitExcept>
+		</Location>
+
+		# allow making directories, listing, chdir, and uploading files.
+		# But don't allow retrieving files.
+		<Location /upload>
+			<LimitExcept LIST PUT MKCOL CHDIR>
+				Deny from all
+			</LimitExcept>
+		</Location>
+	</VirtualHost>
+</IfDefine>
