@@ -1,3 +1,0 @@
-MD5 d92a3a31c5baef53acc06dca13bb27cb mod_ftpd-0.13.0.tar.bz2 327372
-RMD160 6f9d39add3ec340403d0fc4b6b9a4b2ccd0a9f3c mod_ftpd-0.13.0.tar.bz2 327372
-SHA256 512ae313d606dc8f2cda9efb3cffe9685f573807a1fcd1e2f8604cad3c131e49 mod_ftpd-0.13.0.tar.bz2 327372
