@@ -1,3 +1,0 @@
-MD5 236bbacd61d434069d71493de916609f mod_ftpd-0.13.1.tar.bz2 325493
-RMD160 43bda3c1932a7cdc1a98da99ee314a94d88d8757 mod_ftpd-0.13.1.tar.bz2 325493
-SHA256 780d0de38a865c0dbb44df49dfc675d769c90b14dd60600858137f0cf21059a6 mod_ftpd-0.13.1.tar.bz2 325493
