@@ -1,0 +1,3 @@
+MD5 073532fb7837657cf52adecbb43a2f68 mod_ftpd-0.14.tar.bz2 330410
+RMD160 01823f02b2ae27952eef13946201e1ca9e55285c mod_ftpd-0.14.tar.bz2 330410
+SHA256 f36d3b65a5a200fca0c58e453246635e0f8e94c7f870d2b2f1946fa4a8b06d09 mod_ftpd-0.14.tar.bz2 330410
