@@ -1,6 +1,13 @@
 # ChangeLog for www-apache/mod_ftpd
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_ftpd/ChangeLog,v 1.2 2007/08/04 17:17:43 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_ftpd/ChangeLog,v 1.3 2007/09/21 20:35:10 hollow Exp $
+
+*mod_ftpd-0.14-r1 (21 Sep 2007)
+
+  21 Sep 2007; Benedikt Böhm <hollow@gentoo.org>
+  +files/0.14-r1/45_mod_ftpd.conf, -mod_ftpd-0.13.0.ebuild,
+  -mod_ftpd-0.13.1.ebuild, +mod_ftpd-0.14-r1.ebuild:
+  fix #192862, cleanup
 
   29 Jul 2007; Christian Heim <phreak@gentoo.org> +files/45_mod_ftpd.conf,
   +metadata.xml, +mod_ftpd-0.13.0.ebuild, +mod_ftpd-0.13.1.ebuild,
